Fixed mobile spacing issue

--- a/styling.css
+++ b/styling.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: "Outfit";
-    /* line-height: 150%; */
+    line-height: 150%;
 }
 
 h1 {
